crates/strider/tests/snapshots/v2__ppc64be__memory__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10010304:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x1001029c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x9:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x10010230:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v14" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v14" [color="#888888", style=dashed];
  "v14" -> "11" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "11" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x10010364:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v20" [color="#888888", style=dashed];
  "v20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x10010384:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v25" [color="#888888", style=dashed];
  "v25" -> "21" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "21" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x100103b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "26" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "26" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x100103f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "31" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "37" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "31" -> "37" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v40" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v40" [color="#888888", style=dashed];
  "v40" -> "37" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v41" [color="#888888", style=dashed];
  "v41" -> "37" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v42" [color="#888888", style=dashed];
  "v42" -> "37" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "39" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v40" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "31" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffffffffffd4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "31" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xffffffffffffffb8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="StackStore u32\n→ ram[sp - 72]", shape=box3d, fillcolor="#20182a"];
  "26" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xffffffffffffffc0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "21" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v56" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v56" [color="#888888", style=dashed];
  "v56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "57" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u64\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "58" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "58" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "60" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0xfffffffffffefe0c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="init\nr12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "58" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "15" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v66" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v66" [color="#888888", style=dashed];
  "v66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0xffffffffffffffc8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u64\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "69" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0xffffffffffffffd0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "72" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "70" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "11" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v75" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v75" [color="#888888", style=dashed];
  "v75" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "78" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "5" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "78" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" -> "79" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "80" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0xfffffffffffefdfc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "82" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "83" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "84" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "82" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "85" -> "84" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "85" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="const 0xfffffffffffefe04:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="StackStore u64\n→ ram[sp - 176]", shape=box3d, fillcolor="#20182a"];
  "87" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "88" -> "82" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "82" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "88" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "89" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0xffffffffffffff50:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "90" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "91" -> "87" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "92" -> "87" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "92" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "91" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "93" -> "91" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" -> "91" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "94" -> "90" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "95" -> "90" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "96" -> "90" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "95" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "97" -> "95" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "97" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" -> "95" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "94" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "83" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "98" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "98" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
